# bitpet-cli

./: .appveyor.yml  .gitignore  .travis.yml  Cargo.toml  ERROR_TRACKING_SETUP.md  LICENSE  README.md
.circleci/: config.yml
.github/workflows/: release.yml
ci/: package-travis.sh
examples/: error_tracking.rs
src/: auth.rs  commands.rs  config.rs  constants.rs  error.rs  git.rs  http_mocking.rs  lib.rs  main.rs  model.rs  pet.rs  pet_sim.rs  simulator.rs  trace_errors_macro.rs  ui.rs  utils.rs
