[package]
name = "bitpet-cli"
version = "0.1.0"
edition = "2024"
description = "CLI tool to create and manage your BitPet (https://bitpet.dev)"
authors = ["Rishabh Poddar <rishabh@trythis.app>"]

[[bin]]
name = "pet"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.47", features = ["derive"] }
colored = "3.0.0"
dirs = "6.0.0"
open = "5.3.2"
rand = "0.9.2"
reqwest = { version = "0.12.23", features = ["json", "blocking"] }
serde = { version = "1.0.225", features = ["derive"] }
serde_json = "1.0.145"

# Development dependencies
[dev-dependencies]
# Add any test dependencies here if needed

# Profile optimizations
[profile.dev]
# Faster linking for development
opt-level = 0
debug = true
incremental = true

[profile.release]
# Optimized release builds
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
