[package]
name = "bitpet-cli"
version = "0.1.0"
edition = "2024"
description = "CLI tool to create and manage your BitPet (https://bitpet.dev)"
authors = ["Rishabh Poddar <rishabh@trythis.app>"]

[[bin]]
name = "pet"
path = "src/main.rs"

[lib]
name = "bitpet_cli"
path = "src/trace_errors_macro.rs"
proc-macro = true

[dependencies]
async-trait = "0.1.89"
clap = { version = "4.5.47", features = ["derive"] }
colored = "3.0.0"
dirs = "6.0.0"
http = "1.3.1"
open = "5.3.2"
rand = "0.9.2"
reqwest = { version = "0.12.23", features = ["json"] }
reqwest-middleware = "0.4.2"
serde = { version = "1.0.225", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }

# Proc macro dependencies
proc-macro2 = "1.0.101"
quote = "1.0.40"
syn = { version = "2.0.106", features = ["full"] }

# Development dependencies
[dev-dependencies]
# Add any test dependencies here if needed

# Profile optimizations
[profile.dev]
# Faster linking for development
opt-level = 0
debug = true
incremental = true

[profile.release]
# Optimized release builds
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
