[package]
name = "bitpet-cli"
version = "0.1.0"
edition = "2024"
description = "CLI tool to create and manage your BitPet (https://bitpet.dev)"
authors = ["Rishabh Poddar <rishabh@trythis.app>"]

[[bin]]
name = "pet"
path = "src/main.rs"

[dependencies]
async-trait = "0.1.89"
chrono = "0.4.42"
clap = { version = "4.5.47", features = ["derive"] }
colored = "3.0.0"
dirs = "6.0.0"
http = "1.3.1"
open = "5.3.2"
rand = "0.9.2"
reqwest = { version = "0.12.23", features = ["json"] }
reqwest-middleware = "0.4.2"
serde = { version = "1.0.225", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }

# Development dependencies
[dev-dependencies]
# Add any test dependencies here if needed

# Profile optimizations
[profile.dev]
# Faster linking for development
opt-level = 0
debug = true
incremental = true

[profile.release]
# Optimized release builds
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
